--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ border-bottom: 1px solid hsl(261, 88%, 10%);
 .remove{
   display:none;
 }
-@media screen and (max-width: 670px){
+@media screen and (min-width: 670px){
   .container{
     display: grid;
     grid-template-columns: 1fr 1fr;
